<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BusinessAdvisor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alemaniaName">Alemania</string>
    <string name="brasilName">Brasil</string>
    <string name="estados_UnidosName">Estados Unidos</string>
    <string name="franciaName">Francia</string>
    <string name="mexicoName">Mexico</string>
    <string name="espanaName">España</string>
    <string name="seleccione_un_pais">Selaccione Un Pais</string>
    <string name="estadosName">Estados Unidos</string>
    <string name="spainName">España</string>
    <string name="antesdepartir">Antes De Partir</string>
    <string name="informaciongeneral">Informacion General</string>
    <string name="negocios">Negocios</string>
    <string name="cultura">Cultura</string>
    <string name="emergencias">Emergencias</string>
    <string name="recomendaciones">Recomendaciones</string>
    <color name="fondoaplicacion">#ff00c0e8</color>
    <string name="opciones">Seleccione Una Categoria</string>
    <string name="informacionGeneral">Informacion General</string>
    <string name="antesdePartir">Antes De Partir</string>
    
    <string name="emergencia">Emergencia</string>
    <string name="fondo">Fondo</string>
    <string name="informacion">Informacion</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="documentos">Documentos</string>
    <string name="lugaresdeinteres">Lugares De Interes</string>
    <string name="transporte">Transporte</string>
    <string name="arcotriunfo">Arco del Triunfo</string>
    <string name="clima">Clima</string>
    <string name="avion">Aereopuerto</string>
    <string name="puentefrancia">Puente Francia</string>
    <string name="vestimenta">Vestimenta</string>
    <string name="comunicacion">Comunicacion</string>
    <string name="agenda">Agenda</string>
    <string name="alimentos">Alimentos</string>
    <string name="general">General</string>
    <string name="palacio">Palacio</string>
    <string name="puntualidad">Puntualidad</string>
    <string name="religion">Religion</string>
    <string name="lengua">Lengua</string>
    <string name="costumbres">Costumbres</string>
    <string name="diasfestivos">Dias Festivos</string>
    <string name="catedralfrancia">Catedral Francia</string>
    <string name="embajada">Embajada</string>
    <string name="consulado">Consulado</string>
    <string name="policia">Policia</string>
    <string name="hospital">Hospital</string>
    <string name="piramide">Piramide</string>
    <string name="quehacer">Que Hacer</string>
    <string name="quenohacer">Que NO hacer</string>
    <string name="saludos">Saludos</string>
    <string name="vocabulario">Vocabulario</string>
    <string name="mont">Montpellier</string>
    <string name="aereopuerto">Aereopuerto</string>
    <string name="los_ciudadanos_mexicanos_no_requieren_de_visa_para_ingresar_como_turistas_a_francia_con_un_pasaporte_de_una_vigencia_m_nima_de_seis_meses_pueden_permanecer_en_francia_durante_90_d_as_por_un_per_odo_de_seis_meses_al_t_rmino_de_esos_90_d_as_el_visitante_debe_abandonar_el_territorio_de_la_uni_n_europea_por_otros_noventa_d_as_antes_de_volver_a_entrar_a_territorio_europeo_es_recomendable_no_exceder_el_plazo_citado_ya_que_la_autoridad_migratoria_puede_expulsarle_y_sancionarle_con_prohibici_n_de_entrada_a_la_uni_n_europea_al_t_rmino_del_lapso_de_90_d_as_el_visitante_debe_salir_necesariamente_de_la_uni_n_europea_en_estos_casos_no_no_basta_salir_a_un_tercer_pa_s_por_unos_d_as_y_volver_a_entrar_a_territorio_europeo_ya_que_de_hacerlo_las_autoridades_migratorias_podr_an_negarle_el_ingreso_a_francia_a_n_en_el_caso_de_que_su_viaje_de_regreso_a_m_xico_sea_a_partir_de_una_ciudad_francesa_">Los ciudadanos mexicanos no requieren de visa para ingresar como turistas a Francia. Con un pasaporte de una vigencia mínima de seis meses pueden permanecer en Francia durante 90 días por un período de seis meses. Al término de esos 90 días el visitante debe abandonar el territorio de la Unión Europea por otros noventa días antes de volver a entrar a territorio europeo. Es recomendable no exceder el plazo citado ya que la autoridad migratoria puede expulsarle y sancionarle con prohibición de entrada a la Unión Europea. Al término del lapso de 90 días, el visitante debe salir necesariamente de la Unión Europea. En estos casos NO/NO basta salir a un tercer país por unos días y volver a entrar a territorio europeo, ya que, de hacerlo, las autoridades migratorias podrían negarle el ingreso a Francia, aún en el caso de que su viaje de regreso a México sea a partir de una ciudad francesa.</string>
    

</resources>
